Remove sys/cam/scsi/scsi_ch.*, published in a 4-clause BSD license (ie GPL incompatible), but not used.
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@2417 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/rules
+++ b/debian/rules
@@ -36,6 +36,7 @@ get-orig-source:
 	done
 	mv freebsd-libs-$(VERSION)/src/* freebsd-libs-$(VERSION)
 	rmdir freebsd-libs-$(VERSION)/src
+	rm -f freebsd-libs-$(VERSION)/sys/cam/scsi/scsi_ch.*
 	tar -czf ../freebsd-libs_$(VERSION).orig.tar.gz freebsd-libs-$(VERSION)
 	rm -rf freebsd-libs-$(VERSION)
 
