--- a/debian/rules
+++ b/debian/rules
@@ -36,7 +36,10 @@ get-orig-source:
 	done
 	mv freebsd-libs-$(VERSION)/src/* freebsd-libs-$(VERSION)
 	rmdir freebsd-libs-$(VERSION)/src
+	# Remove unused files with non GPL compatible license (eg BSD 4 clauses)
 	rm -f freebsd-libs-$(VERSION)/sys/cam/scsi/scsi_ch.*
+	rm -f freebsd-libs-$(VERSION)/lib/libkvm/kvm_ia64.c
+	rm -f freebsd-libs-$(VERSION)/lib/libkvm/kvm_powerpc.c
 	tar -czf ../freebsd-libs_$(VERSION).orig.tar.gz freebsd-libs-$(VERSION)
 	rm -rf freebsd-libs-$(VERSION)
 
