--- a/debian/rules
+++ b/debian/rules
@@ -11,7 +11,7 @@ export DH_OPTIONS
 
 CFLAGS = -Wall -g -pipe -fPIC -I. -D_GNU_SOURCE
 
-ifneq (,$(findstring noopt,$(DEB_BUILD_OPTIONS)))
+ifneq (,$(filter noopt,$(DEB_BUILD_OPTIONS)))
 	CFLAGS += -O0
 else
 	CFLAGS += -O2
