--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,8 @@ Section: libs
 Priority: optional
 Maintainer: GNU/kFreeBSD Maintainers <debian-bsd@lists.debian.org>
 Uploaders: Aurelien Jarno <aurel32@debian.org>
-Build-Depends: debhelper (>= 5.0.0), freebsd-buildutils, libbsd-dev, libfreebsd-dev, libgdbm-dev, kfreebsd-kernel-headers (>= 0.31), libexpat-dev, quilt
+Build-Depends: debhelper (>= 5.0.0), quilt, freebsd-buildutils, libbsd-dev,
+ libfreebsd-dev, libgdbm-dev, kfreebsd-kernel-headers (>= 0.31), libexpat-dev
 # libexpat-dev: aka bsdxml. needed by libgeom
 Standards-Version: 3.8.1
 
@@ -83,7 +84,8 @@ Description: FreeBSD kvm (kernel memory interface) library
 Package: libkvm-dev
 Section: libdevel
 Architecture: kfreebsd-i386 kfreebsd-amd64
-Depends: libkvm0 (>= ${binary:Version}), libc0.1-dev | libc-dev, libfreebsd-dev, libbsd-dev
+Depends: libkvm0 (>= ${binary:Version}), libc0.1-dev | libc-dev,
+ libfreebsd-dev, libbsd-dev
 Description: Development files for libkvm
  This package contains the header files and static library needed to
  compile applications that use libkvm.
@@ -98,7 +100,8 @@ Description: FreeBSD devstat (kernel interface) library
 Package: libdevstat-dev
 Section: libdevel
 Architecture: kfreebsd-i386 kfreebsd-amd64
-Depends: libdevstat6 (>= ${binary:Version}), libkvm-dev, libc0.1-dev | libc-dev, libfreebsd-dev, libbsd-dev
+Depends: libdevstat6 (>= ${binary:Version}), libkvm-dev, libc0.1-dev | libc-dev,
+ libfreebsd-dev, libbsd-dev
 Description: Development files for libdevstat
  This package contains the header files and static library needed to
  compile applications that use libdevstat.
