* add Vcs-* fields into debian/control
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@2495 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/control
+++ b/debian/control
@@ -6,6 +6,8 @@ Uploaders: Aurelien Jarno <aurel32@debian.org>
 Build-Depends: debhelper (>= 5.0.0), quilt, freebsd-buildutils, libbsd-dev,
  libfreebsd-dev, libgdbm-dev, kfreebsd-kernel-headers (>= 0.34), libexpat-dev
 # libexpat-dev: aka bsdxml. needed by libgeom
+Vcs-Browser: http://svn.debian.org/wsvn/glibc-bsd/trunk/freebsd-libs/
+Vcs-Svn: svn://svn.debian.org/glibc-bsd/trunk/freebsd-libs/
 Standards-Version: 3.8.1
 
 Package: libsbuf0
