[ Aurelien Jarno ]   * Tighten build-depends on libbsd-dev.
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@2572 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: libs
 Priority: optional
 Maintainer: GNU/kFreeBSD Maintainers <debian-bsd@lists.debian.org>
 Uploaders: Aurelien Jarno <aurel32@debian.org>
-Build-Depends: debhelper (>= 5.0.0), quilt, freebsd-buildutils, libbsd-dev,
+Build-Depends: debhelper (>= 5.0.0), quilt, freebsd-buildutils, libbsd-dev (>= 0.1.4),
  libfreebsd-dev, libgdbm-dev, kfreebsd-kernel-headers (>= 0.33), libexpat-dev
 # libexpat-dev: aka bsdxml. needed by libgeom
 Vcs-Browser: http://svn.debian.org/wsvn/glibc-bsd/trunk/freebsd-libs/
