--- a/debian/rules
+++ b/debian/rules
@@ -17,9 +17,9 @@ else
 	CFLAGS += -O2
 endif
 
-ANONCVS=anoncvs@anoncvs.fr.freebsd.org:/home/ncvs
-RELENG=RELENG_7_2_0_RELEASE
-VERSION=7.2
+VERSION=$(shell dpkg-parsechangelog | sed -e '/^Version:/!d' -e 's/^Version: //g' -e 's/-.*//g')
+SVN=svn://svn.freebsd.org/base/releng/$(VERSION)
+ORIGDIR=freebsd-libs-$(VERSION)
 PATH:=/usr/lib/freebsd:$(PATH)
 DESTDIR=$(CURDIR)/debian/tmp
 PMAKE=COPTS="$(CFLAGS)" CFLAGS="$(CFLAGS)" NO_WERROR=1 NOGCCERROR=1 NOSHARED=NO NO_SHARED=NO DESTDIR=$(DESTDIR) make
@@ -29,19 +29,19 @@ export SHLIBDIR=/usr/lib
 build: build-arch build-indep
 
 get-orig-source:
-	rm -rf freebsd-libs-$(VERSION)
+	rm -rf $(ORIGDIR)
 	for i in lib/libcam lib/libdevstat lib/libgeom lib/libipx lib/libkiconv \
-	         lib/libkvm lib/libsbuf lib/libusbhid sys/cam sys/kern/subr_sbuf.c ; do \
-	    cvs -d $(ANONCVS) export -r $(RELENG) -N -d freebsd-libs-$(VERSION) src/$$i ; \
+	         lib/libkvm lib/libsbuf lib/libusbhid sys/cam ; do \
+	    svn export $(SVN)/$$i $(ORIGDIR)/$$i ; \
 	done
-	mv freebsd-libs-$(VERSION)/src/* freebsd-libs-$(VERSION)
-	rmdir freebsd-libs-$(VERSION)/src
+	mkdir -p freebsd-libs-$(VERSION)/sys/kern ; \
+	    svn cat $(SVN)/$$i/sys/kern/subr_sbuf.c > $(ORIGDIR)/sys/kern/subr_sbuf.c
 	# Remove unused files with non GPL compatible license (eg BSD 4 clauses)
-	rm -f freebsd-libs-$(VERSION)/sys/cam/scsi/scsi_ch.*
-	rm -f freebsd-libs-$(VERSION)/lib/libkvm/kvm_ia64.c
-	rm -f freebsd-libs-$(VERSION)/lib/libkvm/kvm_powerpc.c
-	tar -czf ../freebsd-libs_$(VERSION).orig.tar.gz freebsd-libs-$(VERSION)
-	rm -rf freebsd-libs-$(VERSION)
+	rm -f $(ORIGDIR)/sys/cam/scsi/scsi_ch.*
+	rm -f $(ORIGDIR)/lib/libkvm/kvm_ia64.c
+	rm -f $(ORIGDIR)/lib/libkvm/kvm_powerpc.c
+	tar -czf ../freebsd-libs_$(VERSION).orig.tar.gz $(ORIGDIR)
+	rm -rf $(ORIGDIR)
 
 patch: patch-stamp
 patch-stamp:
