* use "release" not "releng" for upstream checkout
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@2578 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/rules
+++ b/debian/rules
@@ -18,7 +18,7 @@ else
 endif
 
 VERSION=$(shell dpkg-parsechangelog | sed -e '/^Version:/!d' -e 's/^Version: //g' -e 's/-.*//g')
-SVN=svn://svn.freebsd.org/base/releng/$(VERSION)
+SVN=svn://svn.freebsd.org/base/release/$(VERSION).0
 ORIGDIR=freebsd-libs-$(VERSION)
 PATH:=/usr/lib/freebsd:$(PATH)
 DESTDIR=$(CURDIR)/debian/tmp
