--- a/debian/control
+++ b/debian/control
@@ -103,7 +103,7 @@ Package: libdevstat-dev
 Section: libdevel
 Architecture: kfreebsd-i386 kfreebsd-amd64
 Depends: libdevstat6 (>= ${binary:Version}), libkvm-dev, libc0.1-dev | libc-dev,
- libfreebsd-dev, libbsd-dev
+ libbsd-dev
 Description: Development files for libdevstat
  This package contains the header files and static library needed to
  compile applications that use libdevstat.
