--- a/debian/control
+++ b/debian/control
@@ -54,7 +54,7 @@ Architecture: kfreebsd-i386 kfreebsd-amd64
 Depends: libgeom0 (>= ${binary:Version}), libc0.1-dev | libc-dev, libbsd-dev
 Description: Development files for libgeom
  This package contains the header files and static library needed to
- compile applications that use libcam.
+ compile applications that use libgeom.
 
 Package: libusbhid3
 Architecture: kfreebsd-i386 kfreebsd-amd64
