--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,7 @@ Priority: optional
 Maintainer: GNU/kFreeBSD Maintainers <debian-bsd@lists.debian.org>
 Uploaders: Aurelien Jarno <aurel32@debian.org>
 Build-Depends: debhelper (>= 5.0.0), quilt, freebsd-buildutils, libbsd-dev (>= 0.1.4),
- libfreebsd-dev, libgdbm-dev, kfreebsd-kernel-headers (>= 0.34), libexpat-dev
+ libc0.1-dev (>= 2.10), libgdbm-dev, kfreebsd-kernel-headers (>= 0.34), libexpat-dev
 # libexpat-dev: aka bsdxml. needed by libgeom
 Vcs-Browser: http://svn.debian.org/wsvn/glibc-bsd/trunk/freebsd-libs/
 Vcs-Svn: svn://svn.debian.org/glibc-bsd/trunk/freebsd-libs/
@@ -86,8 +86,7 @@ Description: FreeBSD kvm (kernel memory interface) library
 Package: libkvm-dev
 Section: libdevel
 Architecture: kfreebsd-i386 kfreebsd-amd64
-Depends: libkvm0 (>= ${binary:Version}), libc0.1-dev | libc-dev,
- libfreebsd-dev, libbsd-dev
+Depends: libkvm0 (>= ${binary:Version}), libc0.1-dev | libc-dev, libbsd-dev
 Description: Development files for libkvm
  This package contains the header files and static library needed to
  compile applications that use libkvm.
