* Fix dependency between lib and -dev packages.
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@2812 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/control
+++ b/debian/control
@@ -21,7 +21,7 @@ Description: FreeBSD string buffer library
 Package: libsbuf-dev
 Section: libdevel
 Architecture: kfreebsd-i386 kfreebsd-amd64
-Depends: libsbuf0 (>= ${binary:Version}), libc0.1-dev | libc-dev
+Depends: libsbuf0 (= ${binary:Version}), libc0.1-dev | libc-dev
 Description: Development files for libsbuf
  This package contains the header files and static library needed to
  compile applications that use libsbuf.
@@ -36,7 +36,7 @@ Description: FreeBSD CAM (Common Access Method) library
 Package: libcam-dev
 Section: libdevel
 Architecture: kfreebsd-i386 kfreebsd-amd64
-Depends: libcam0 (>= ${binary:Version}), libc0.1-dev | libc-dev, libbsd-dev
+Depends: libcam0 (= ${binary:Version}), libc0.1-dev | libc-dev, libbsd-dev
 Description: Development files for libcam
  This package contains the header files and static library needed to
  compile applications that use libcam.
@@ -51,7 +51,7 @@ Description: FreeBSD GEOM library
 Package: libgeom-dev
 Section: libdevel
 Architecture: kfreebsd-i386 kfreebsd-amd64
-Depends: libgeom0 (>= ${binary:Version}), libc0.1-dev | libc-dev, libbsd-dev
+Depends: libgeom0 (= ${binary:Version}), libc0.1-dev | libc-dev, libbsd-dev
 Description: Development files for libgeom
  This package contains the header files and static library needed to
  compile applications that use libgeom.
@@ -71,7 +71,7 @@ Description: FreeBSD library to access USB HID devices
 Package: libusbhid-dev
 Section: libdevel
 Architecture: kfreebsd-i386 kfreebsd-amd64
-Depends: libusbhid3 (>= ${binary:Version}), libc0.1-dev | libc-dev, libbsd-dev
+Depends: libusbhid3 (= ${binary:Version}), libc0.1-dev | libc-dev, libbsd-dev
 Description: Development files for libusbhid
  This package contains the header files and static library needed to
  compile applications that use libusbhid.
@@ -86,7 +86,7 @@ Description: FreeBSD kvm (kernel memory interface) library
 Package: libkvm-dev
 Section: libdevel
 Architecture: kfreebsd-i386 kfreebsd-amd64
-Depends: libkvm0 (>= ${binary:Version}), libc0.1-dev | libc-dev, libbsd-dev
+Depends: libkvm0 (= ${binary:Version}), libc0.1-dev | libc-dev, libbsd-dev
 Description: Development files for libkvm
  This package contains the header files and static library needed to
  compile applications that use libkvm.
@@ -101,7 +101,7 @@ Description: FreeBSD devstat (kernel interface) library
 Package: libdevstat-dev
 Section: libdevel
 Architecture: kfreebsd-i386 kfreebsd-amd64
-Depends: libdevstat6 (>= ${binary:Version}), libkvm-dev, libc0.1-dev | libc-dev,
+Depends: libdevstat6 (= ${binary:Version}), libkvm-dev, libc0.1-dev | libc-dev,
  libbsd-dev
 Description: Development files for libdevstat
  This package contains the header files and static library needed to
@@ -116,7 +116,7 @@ Description: FreeBSD IPX address conversion support library
 Package: libipx-dev
 Section: libdevel
 Architecture: kfreebsd-i386 kfreebsd-amd64
-Depends: libipx2 (>= ${binary:Version}), libc0.1-dev | libc-dev
+Depends: libipx2 (= ${binary:Version}), libc0.1-dev | libc-dev
 Description: Development files for libipx
  This package contains the header files and static library needed to
  compile applications that use libipx.
@@ -131,7 +131,7 @@ Description: FreeBSD kernel side iconv library
 Package: libkiconv-dev
 Section: libdevel
 Architecture: kfreebsd-i386 kfreebsd-amd64
-Depends: libkiconv3 (>= ${binary:Version}), libc0.1-dev | libc-dev
+Depends: libkiconv3 (= ${binary:Version}), libc0.1-dev | libc-dev
 Description: Development files for libkiconv
  This package contains the header files and static library needed to
  compile applications that use libkiconv.
