more libs will be needed
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@2844 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/rules
+++ b/debian/rules
@@ -32,7 +32,7 @@ build: build-arch build-indep
 get-orig-source:
 	rm -rf $(ORIGDIR)
 	for i in lib/libcam lib/libdevstat lib/libgeom lib/libipx lib/libkiconv \
-	         lib/libkvm lib/libsbuf lib/libusbhid sys/cam ; do \
+	         lib/libkvm lib/libmemstat lib/libsbuf lib/libusb lib/libusbhid sys/cam ; do \
 	    svn export $(SVN)/$$i $(ORIGDIR)/$$i ; \
 	done
 	mkdir -p freebsd-libs-$(VERSION)/sys/kern ; \
