--- a/debian/control
+++ b/debian/control
@@ -107,6 +107,22 @@ Description: Development files for libdevstat
  This package contains the header files and static library needed to
  compile applications that use libdevstat.
 
+Package: libmemstat3
+Architecture: kfreebsd-i386 kfreebsd-amd64
+Depends: ${shlibs:Depends}
+Description: FreeBSD memstat (kernel interface) library
+ The memstat library provides a uniform interface for accessing kernel memstat
+ interface.
+
+Package: libmemstat-dev
+Section: libdevel
+Architecture: kfreebsd-i386 kfreebsd-amd64
+Depends: libmemstat3 (= ${binary:Version}), libkvm-dev, libc0.1-dev | libc-dev,
+ libbsd-dev
+Description: Development files for libmemstat
+ This package contains the header files and static library needed to
+ compile applications that use libmemstat.
+
 Package: libipx2
 Architecture: kfreebsd-i386 kfreebsd-amd64
 Depends: ${shlibs:Depends}
