--- a/debian/rules
+++ b/debian/rules
@@ -49,7 +49,7 @@ patch-stamp:
 	QUILT_PATCHES=debian/patches quilt push -a || test $$? = 2
 	touch $@
 
-build-arch: build-cam build-geom build-sbuf build-ipx build-kiconv build-kvm build-usbhid build-devstat
+build-arch: build-cam build-geom build-sbuf build-ipx build-kiconv build-kvm build-usbhid build-devstat build-memstat
 
 build-cam: build-cam-stamp
 build-cam-stamp: patch build-sbuf
@@ -81,6 +81,11 @@ build-devstat-stamp: patch build-kvm
 	$(PMAKE) -C $(CURDIR)/lib/libdevstat
 	touch $@
 
+build-memstat: build-memstat-stamp
+build-memstat-stamp: patch build-kvm
+	$(PMAKE) -C $(CURDIR)/lib/libmemstat
+	touch $@
+
 build-sbuf: build-sbuf-stamp
 build-sbuf-stamp: patch
 	$(PMAKE) -C $(CURDIR)/lib/libsbuf
@@ -100,6 +105,7 @@ clean:
 	dh_testroot
 	$(PMAKE) -C $(CURDIR)/lib/libcam clean
 	$(PMAKE) -C $(CURDIR)/lib/libdevstat clean
+	$(PMAKE) -C $(CURDIR)/lib/libmemstat clean
 	$(PMAKE) -C $(CURDIR)/lib/libgeom clean
 	$(PMAKE) -C $(CURDIR)/lib/libipx clean
 	$(PMAKE) -C $(CURDIR)/lib/libkiconv clean
@@ -128,6 +134,7 @@ install-arch:
 	$(PMAKE) -C $(CURDIR)/lib/libkiconv install
 	$(PMAKE) -C $(CURDIR)/lib/libkvm install
 	$(PMAKE) -C $(CURDIR)/lib/libdevstat install
+	$(PMAKE) -C $(CURDIR)/lib/libmemstat install
 	$(PMAKE) -C $(CURDIR)/lib/libusbhid install
 
 	dh_install -s --list-missing --sourcedir=debian/tmp
