* add libnetgraph4 and libnetgraph-dev packages
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@2848 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/control
+++ b/debian/control
@@ -123,6 +123,21 @@ Description: Development files for libmemstat
  This package contains the header files and static library needed to
  compile applications that use libmemstat.
 
+Package: libnetgraph4
+Architecture: kfreebsd-i386 kfreebsd-amd64
+Depends: ${shlibs:Depends}
+Description: FreeBSD memstat (kernel interface) library
+ The netgraph library provides a uniform interface for accessing kernel netgraph
+ interface.
+
+Package: libnetgraph-dev
+Section: libdevel
+Architecture: kfreebsd-i386 kfreebsd-amd64
+Depends: libnetgraph4 (= ${binary:Version}), libc0.1-dev | libc-dev, libbsd-dev
+Description: Development files for libnetgraph
+ This package contains the header files and static library needed to
+ compile applications that use libnetgraph.
+
 Package: libipx2
 Architecture: kfreebsd-i386 kfreebsd-amd64
 Depends: ${shlibs:Depends}
