--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,7 @@ Priority: optional
 Maintainer: GNU/kFreeBSD Maintainers <debian-bsd@lists.debian.org>
 Uploaders: Aurelien Jarno <aurel32@debian.org>
 Build-Depends: debhelper (>= 5.0.0), quilt, freebsd-buildutils, libbsd-dev (>= 0.1.4),
- libc0.1-dev (>= 2.10), libgdbm-dev, kfreebsd-kernel-headers (>= 0.34), libexpat-dev
+ libc0.1-dev (>= 2.10), libgdbm-dev, kfreebsd-kernel-headers (>= 0.45), libexpat-dev
 # libexpat-dev: aka bsdxml. needed by libgeom
 Vcs-Browser: http://svn.debian.org/wsvn/glibc-bsd/trunk/freebsd-libs/
 Vcs-Svn: svn://svn.debian.org/glibc-bsd/trunk/freebsd-libs/
@@ -75,6 +75,24 @@ Depends: libusbhid4 (= ${binary:Version}), libc0.1-dev | libc-dev, libbsd-dev
 Description: Development files for libusbhid
  This package contains the header files and static library needed to
  compile applications that use libusbhid.
+
+Package: libusb2
+Architecture: kfreebsd-i386 kfreebsd-amd64
+Depends: ${shlibs:Depends}
+Description: FreeBSD userspace USB programming library
+ Library for programming USB applications without the knowledge
+ of FreeBSD kernel internals.
+ .
+ It should be API compatible with both libusb-1.0 and libusb-0.1
+ used on Linux.
+
+Package: libusb2-dev
+Section: libdevel
+Architecture: kfreebsd-i386 kfreebsd-amd64
+Depends: libusb2 (= ${binary:Version}), libc0.1-dev | libc-dev, libbsd-dev
+Description: Development files for libusb2
+ This package contains the header files and static library needed to
+ compile applications that use libusb2.
 
 Package: libkvm0
 Architecture: kfreebsd-i386 kfreebsd-amd64
