* Make libusb2-dev conflict with libusb-dev.
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@2884 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/control
+++ b/debian/control
@@ -90,6 +90,7 @@ Package: libusb2-dev
 Section: libdevel
 Architecture: kfreebsd-i386 kfreebsd-amd64
 Depends: libusb2 (= ${binary:Version}), libc0.1-dev | libc-dev, libbsd-dev
+Conflicts: libusb-dev
 Description: Development files for libusb2
  This package contains the header files and static library needed to
  compile applications that use libusb2.
