* Add a libusb2-udev package.
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@2886 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/control
+++ b/debian/control
@@ -95,6 +95,17 @@ Description: Development files for libusb2
  It should be API compatible with both libusb-1.0 and libusb-0.1
  used on Linux.
 
+Package: libusb2-udeb
+XC-Package-Type: udeb
+Section: debian-installer
+Architecture: kfreebsd-i386 kfreebsd-amd64
+Depends: ${shlibs:Depends}
+Description: Development files for libusb2
+ Library for programming USB applications without the knowledge
+ of FreeBSD kernel internals.
+ .
+ This is a minimal package for use in debian-installer.
+
 Package: libkvm0
 Architecture: kfreebsd-i386 kfreebsd-amd64
 Depends: ${shlibs:Depends}
