--- a/debian/rules
+++ b/debian/rules
@@ -152,6 +152,9 @@ install-arch:
 	$(PMAKE) -C $(CURDIR)/lib/libusbhid install
 	$(PMAKE) -C $(CURDIR)/lib/libusb install
 
+	mkdir -p $(CURDIR)/debian/tmp/usr/lib/pkgconfig
+	install -m644 debian/libusb*.pc $(CURDIR)/debian/tmp/usr/lib/pkgconfig 
+
 	dh_install -s --list-missing --sourcedir=debian/tmp
 
 # Must not depend on anything. This is to be called by
