* Add a libusb-config script matching libusb 0.1.
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@2889 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/rules
+++ b/debian/rules
@@ -153,7 +153,8 @@ install-arch:
 	$(PMAKE) -C $(CURDIR)/lib/libusb install
 
 	mkdir -p $(CURDIR)/debian/tmp/usr/lib/pkgconfig
-	install -m644 debian/libusb*.pc $(CURDIR)/debian/tmp/usr/lib/pkgconfig 
+	install -m644 debian/libusb*.pc $(CURDIR)/debian/tmp/usr/lib/pkgconfig
+	install -m755 debian/libusb-cofnig $(CURDIR)/debian/tmp/usr/bin
 
 	dh_install -s --list-missing --sourcedir=debian/tmp
 
