--- a/debian/control
+++ b/debian/control
@@ -87,6 +87,7 @@ Package: libusb2-dev
 Section: libdevel
 Architecture: kfreebsd-i386 kfreebsd-amd64
 Depends: libusb2 (= ${binary:Version}), libc0.1-dev | libc-dev, libbsd-dev
+Provides: libusb-1.0-0-dev
 Conflicts: libusb-dev
 Description: Development files for libusb2
  This package contains the header files and static library needed to
