Create /usr/bin before installing files in this directory.
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@2892 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/rules
+++ b/debian/rules
@@ -154,6 +154,7 @@ install-arch:
 
 	mkdir -p $(CURDIR)/debian/tmp/usr/lib/pkgconfig
 	install -m644 debian/libusb*.pc $(CURDIR)/debian/tmp/usr/lib/pkgconfig
+	mkdir -p $(CURDIR)/debian/tmp/usr/bin
 	install -m755 debian/libusb-config $(CURDIR)/debian/tmp/usr/bin
 
 	dh_install -s --list-missing --sourcedir=debian/tmp
