--- a/debian/control
+++ b/debian/control
@@ -12,7 +12,7 @@ Standards-Version: 3.8.3
 
 Package: libsbuf0
 Architecture: kfreebsd-i386 kfreebsd-amd64
-Depends: ${shlibs:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: FreeBSD string buffer library
  This library provide a way to handle string buffers. It contains
  numerous functions such as append, copy, cat, print, trim whitespace
@@ -21,14 +21,14 @@ Description: FreeBSD string buffer library
 Package: libsbuf-dev
 Section: libdevel
 Architecture: kfreebsd-i386 kfreebsd-amd64
-Depends: libsbuf0 (= ${binary:Version}), libc0.1-dev | libc-dev
+Depends: libsbuf0 (= ${binary:Version}), ${misc:Depends} libc0.1-dev | libc-dev
 Description: Development files for libsbuf
  This package contains the header files and static library needed to
  compile applications that use libsbuf.
 
 Package: libcam0
 Architecture: kfreebsd-i386 kfreebsd-amd64
-Depends: ${shlibs:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: FreeBSD CAM (Common Access Method) library
  The CAM (Common Access Method) library provides a way for userland
  SCSI applications to construct a SCSI command.
@@ -36,14 +36,14 @@ Description: FreeBSD CAM (Common Access Method) library
 Package: libcam-dev
 Section: libdevel
 Architecture: kfreebsd-i386 kfreebsd-amd64
-Depends: libcam0 (= ${binary:Version}), libc0.1-dev | libc-dev, libbsd-dev
+Depends: libcam0 (= ${binary:Version}), ${misc:Depends}, libc0.1-dev | libc-dev, libbsd-dev
 Description: Development files for libcam
  This package contains the header files and static library needed to
  compile applications that use libcam.
 
 Package: libgeom0
 Architecture: kfreebsd-i386 kfreebsd-amd64
-Depends: ${shlibs:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: FreeBSD GEOM library
  This library provides an interface to GEOM, a modular disk I/O request
  transformation framework provided by the kernel of FreeBSD.
@@ -51,14 +51,14 @@ Description: FreeBSD GEOM library
 Package: libgeom-dev
 Section: libdevel
 Architecture: kfreebsd-i386 kfreebsd-amd64
-Depends: libgeom0 (= ${binary:Version}), libc0.1-dev | libc-dev, libbsd-dev
+Depends: libgeom0 (= ${binary:Version}), ${misc:Depends}, libc0.1-dev | libc-dev, libbsd-dev
 Description: Development files for libgeom
  This package contains the header files and static library needed to
  compile applications that use libgeom.
 
 Package: libusbhid4
 Architecture: kfreebsd-i386 kfreebsd-amd64
-Depends: ${shlibs:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: FreeBSD library to access USB HID devices
  The usbhid library provides routines to extract data from USB Human
  Interface Devices.
@@ -71,14 +71,14 @@ Description: FreeBSD library to access USB HID devices
 Package: libusbhid-dev
 Section: libdevel
 Architecture: kfreebsd-i386 kfreebsd-amd64
-Depends: libusbhid4 (= ${binary:Version}), libc0.1-dev | libc-dev, libbsd-dev
+Depends: libusbhid4 (= ${binary:Version}), ${misc:Depends}, libc0.1-dev | libc-dev, libbsd-dev
 Description: Development files for libusbhid
  This package contains the header files and static library needed to
  compile applications that use libusbhid.
 
 Package: libusb2
 Architecture: kfreebsd-i386 kfreebsd-amd64
-Depends: ${shlibs:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: FreeBSD userspace USB programming library
  Library for programming USB applications without the knowledge
  of FreeBSD kernel internals.
@@ -86,7 +86,7 @@ Description: FreeBSD userspace USB programming library
 Package: libusb2-dev
 Section: libdevel
 Architecture: kfreebsd-i386 kfreebsd-amd64
-Depends: libusb2 (= ${binary:Version}), libc0.1-dev | libc-dev, libbsd-dev
+Depends: libusb2 (= ${binary:Version}), ${misc:Depends}, libc0.1-dev | libc-dev, libbsd-dev
 Provides: libusb-1.0-0-dev
 Conflicts: libusb-dev
 Description: Development files for libusb2
@@ -100,7 +100,7 @@ Package: libusb2-udeb
 XC-Package-Type: udeb
 Section: debian-installer
 Architecture: kfreebsd-i386 kfreebsd-amd64
-Depends: ${shlibs:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: Development files for libusb2
  Library for programming USB applications without the knowledge
  of FreeBSD kernel internals.
@@ -109,7 +109,7 @@ Description: Development files for libusb2
 
 Package: libkvm0
 Architecture: kfreebsd-i386 kfreebsd-amd64
-Depends: ${shlibs:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: FreeBSD kvm (kernel memory interface) library
  The kvm library provides a uniform interface for accessing kernel virtual
  memory images, including live systems and crash dumps.
@@ -117,14 +117,14 @@ Description: FreeBSD kvm (kernel memory interface) library
 Package: libkvm-dev
 Section: libdevel
 Architecture: kfreebsd-i386 kfreebsd-amd64
-Depends: libkvm0 (= ${binary:Version}), libc0.1-dev | libc-dev, libbsd-dev
+Depends: libkvm0 (= ${binary:Version}), ${misc:Depends}, libc0.1-dev | libc-dev, libbsd-dev
 Description: Development files for libkvm
  This package contains the header files and static library needed to
  compile applications that use libkvm.
 
 Package: libdevstat7
 Architecture: kfreebsd-i386 kfreebsd-amd64
-Depends: ${shlibs:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: FreeBSD devstat (kernel interface) library
  The devstat library provides a uniform interface for accessing kernel devstat
  interface.
@@ -132,7 +132,7 @@ Description: FreeBSD devstat (kernel interface) library
 Package: libdevstat-dev
 Section: libdevel
 Architecture: kfreebsd-i386 kfreebsd-amd64
-Depends: libdevstat7 (= ${binary:Version}), libkvm-dev, libc0.1-dev | libc-dev,
+Depends: libdevstat7 (= ${binary:Version}), ${misc:Depends}, libkvm-dev, libc0.1-dev | libc-dev,
  libbsd-dev
 Description: Development files for libdevstat
  This package contains the header files and static library needed to
@@ -140,7 +140,7 @@ Description: Development files for libdevstat
 
 Package: libmemstat3
 Architecture: kfreebsd-i386 kfreebsd-amd64
-Depends: ${shlibs:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: FreeBSD memstat (kernel interface) library
  The memstat library provides a uniform interface for accessing kernel memstat
  interface.
@@ -148,7 +148,7 @@ Description: FreeBSD memstat (kernel interface) library
 Package: libmemstat-dev
 Section: libdevel
 Architecture: kfreebsd-i386 kfreebsd-amd64
-Depends: libmemstat3 (= ${binary:Version}), libkvm-dev, libc0.1-dev | libc-dev,
+Depends: libmemstat3 (= ${binary:Version}), ${misc:Depends}, libkvm-dev, libc0.1-dev | libc-dev,
  libbsd-dev
 Description: Development files for libmemstat
  This package contains the header files and static library needed to
@@ -156,7 +156,7 @@ Description: Development files for libmemstat
 
 Package: libnetgraph4
 Architecture: kfreebsd-i386 kfreebsd-amd64
-Depends: ${shlibs:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: FreeBSD memstat (kernel interface) library
  The netgraph library provides a uniform interface for accessing kernel netgraph
  interface.
@@ -164,28 +164,28 @@ Description: FreeBSD memstat (kernel interface) library
 Package: libnetgraph-dev
 Section: libdevel
 Architecture: kfreebsd-i386 kfreebsd-amd64
-Depends: libnetgraph4 (= ${binary:Version}), libc0.1-dev | libc-dev, libbsd-dev
+Depends: libnetgraph4 (= ${binary:Version}), ${misc:Depends}, libc0.1-dev | libc-dev, libbsd-dev
 Description: Development files for libnetgraph
  This package contains the header files and static library needed to
  compile applications that use libnetgraph.
 
 Package: libipx2
 Architecture: kfreebsd-i386 kfreebsd-amd64
-Depends: ${shlibs:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: FreeBSD IPX address conversion support library
  The IPX library provides a set of routune to convert IPX addresses.
 
 Package: libipx-dev
 Section: libdevel
 Architecture: kfreebsd-i386 kfreebsd-amd64
-Depends: libipx2 (= ${binary:Version}), libc0.1-dev | libc-dev
+Depends: libipx2 (= ${binary:Version}), ${misc:Depends}, libc0.1-dev | libc-dev
 Description: Development files for libipx
  This package contains the header files and static library needed to
  compile applications that use libipx.
 
 Package: libkiconv4
 Architecture: kfreebsd-i386 kfreebsd-amd64
-Depends: ${shlibs:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: FreeBSD kernel side iconv library
  The kiconv library provides multi-byte character conversion tables for kernel
  side iconv service.
@@ -193,7 +193,7 @@ Description: FreeBSD kernel side iconv library
 Package: libkiconv-dev
 Section: libdevel
 Architecture: kfreebsd-i386 kfreebsd-amd64
-Depends: libkiconv4 (= ${binary:Version}), libc0.1-dev | libc-dev
+Depends: libkiconv4 (= ${binary:Version}), ${misc:Depends}, libc0.1-dev | libc-dev
 Description: Development files for libkiconv
  This package contains the header files and static library needed to
  compile applications that use libkiconv.
