--- a/debian/control
+++ b/debian/control
@@ -21,7 +21,7 @@ Description: FreeBSD string buffer library
 Package: libsbuf-dev
 Section: libdevel
 Architecture: kfreebsd-i386 kfreebsd-amd64
-Depends: libsbuf0 (= ${binary:Version}), ${misc:Depends} libc0.1-dev | libc-dev
+Depends: libsbuf0 (= ${binary:Version}), ${misc:Depends}, libc0.1-dev | libc-dev
 Description: Development files for libsbuf
  This package contains the header files and static library needed to
  compile applications that use libsbuf.
