Use kfreebsd-any instead of explicit architecture list
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@3056 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/control
+++ b/debian/control
@@ -11,7 +11,7 @@ Vcs-Svn: svn://svn.debian.org/glibc-bsd/trunk/freebsd-libs/
 Standards-Version: 3.8.3
 
 Package: libsbuf0
-Architecture: kfreebsd-i386 kfreebsd-amd64
+Architecture: kfreebsd-any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: FreeBSD string buffer library
  This library provide a way to handle string buffers. It contains
@@ -20,14 +20,14 @@ Description: FreeBSD string buffer library
 
 Package: libsbuf-dev
 Section: libdevel
-Architecture: kfreebsd-i386 kfreebsd-amd64
+Architecture: kfreebsd-any
 Depends: libsbuf0 (= ${binary:Version}), ${misc:Depends}, libc0.1-dev | libc-dev
 Description: Development files for libsbuf
  This package contains the header files and static library needed to
  compile applications that use libsbuf.
 
 Package: libcam0
-Architecture: kfreebsd-i386 kfreebsd-amd64
+Architecture: kfreebsd-any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: FreeBSD CAM (Common Access Method) library
  The CAM (Common Access Method) library provides a way for userland
@@ -35,14 +35,14 @@ Description: FreeBSD CAM (Common Access Method) library
 
 Package: libcam-dev
 Section: libdevel
-Architecture: kfreebsd-i386 kfreebsd-amd64
+Architecture: kfreebsd-any
 Depends: libcam0 (= ${binary:Version}), ${misc:Depends}, libc0.1-dev | libc-dev, libbsd-dev
 Description: Development files for libcam
  This package contains the header files and static library needed to
  compile applications that use libcam.
 
 Package: libgeom0
-Architecture: kfreebsd-i386 kfreebsd-amd64
+Architecture: kfreebsd-any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: FreeBSD GEOM library
  This library provides an interface to GEOM, a modular disk I/O request
@@ -50,14 +50,14 @@ Description: FreeBSD GEOM library
 
 Package: libgeom-dev
 Section: libdevel
-Architecture: kfreebsd-i386 kfreebsd-amd64
+Architecture: kfreebsd-any
 Depends: libgeom0 (= ${binary:Version}), ${misc:Depends}, libc0.1-dev | libc-dev, libbsd-dev
 Description: Development files for libgeom
  This package contains the header files and static library needed to
  compile applications that use libgeom.
 
 Package: libusbhid4
-Architecture: kfreebsd-i386 kfreebsd-amd64
+Architecture: kfreebsd-any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: FreeBSD library to access USB HID devices
  The usbhid library provides routines to extract data from USB Human
@@ -70,14 +70,14 @@ Description: FreeBSD library to access USB HID devices
 
 Package: libusbhid-dev
 Section: libdevel
-Architecture: kfreebsd-i386 kfreebsd-amd64
+Architecture: kfreebsd-any
 Depends: libusbhid4 (= ${binary:Version}), ${misc:Depends}, libc0.1-dev | libc-dev, libbsd-dev
 Description: Development files for libusbhid
  This package contains the header files and static library needed to
  compile applications that use libusbhid.
 
 Package: libusb2
-Architecture: kfreebsd-i386 kfreebsd-amd64
+Architecture: kfreebsd-any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: FreeBSD userspace USB programming library
  Library for programming USB applications without the knowledge
@@ -85,7 +85,7 @@ Description: FreeBSD userspace USB programming library
 
 Package: libusb2-dev
 Section: libdevel
-Architecture: kfreebsd-i386 kfreebsd-amd64
+Architecture: kfreebsd-any
 Depends: libusb2 (= ${binary:Version}), ${misc:Depends}, libc0.1-dev | libc-dev, libbsd-dev
 Provides: libusb-1.0-0-dev
 Conflicts: libusb-dev
@@ -99,7 +99,7 @@ Description: Development files for libusb2
 Package: libusb2-udeb
 XC-Package-Type: udeb
 Section: debian-installer
-Architecture: kfreebsd-i386 kfreebsd-amd64
+Architecture: kfreebsd-any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: Development files for libusb2
  Library for programming USB applications without the knowledge
@@ -108,7 +108,7 @@ Description: Development files for libusb2
  This is a minimal package for use in debian-installer.
 
 Package: libkvm0
-Architecture: kfreebsd-i386 kfreebsd-amd64
+Architecture: kfreebsd-any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: FreeBSD kvm (kernel memory interface) library
  The kvm library provides a uniform interface for accessing kernel virtual
@@ -116,14 +116,14 @@ Description: FreeBSD kvm (kernel memory interface) library
 
 Package: libkvm-dev
 Section: libdevel
-Architecture: kfreebsd-i386 kfreebsd-amd64
+Architecture: kfreebsd-any
 Depends: libkvm0 (= ${binary:Version}), ${misc:Depends}, libc0.1-dev | libc-dev, libbsd-dev
 Description: Development files for libkvm
  This package contains the header files and static library needed to
  compile applications that use libkvm.
 
 Package: libdevstat7
-Architecture: kfreebsd-i386 kfreebsd-amd64
+Architecture: kfreebsd-any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: FreeBSD devstat (kernel interface) library
  The devstat library provides a uniform interface for accessing kernel devstat
@@ -131,7 +131,7 @@ Description: FreeBSD devstat (kernel interface) library
 
 Package: libdevstat-dev
 Section: libdevel
-Architecture: kfreebsd-i386 kfreebsd-amd64
+Architecture: kfreebsd-any
 Depends: libdevstat7 (= ${binary:Version}), ${misc:Depends}, libkvm-dev, libc0.1-dev | libc-dev,
  libbsd-dev
 Description: Development files for libdevstat
@@ -139,7 +139,7 @@ Description: Development files for libdevstat
  compile applications that use libdevstat.
 
 Package: libmemstat3
-Architecture: kfreebsd-i386 kfreebsd-amd64
+Architecture: kfreebsd-any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: FreeBSD memstat (kernel interface) library
  The memstat library provides a uniform interface for accessing kernel memstat
@@ -147,7 +147,7 @@ Description: FreeBSD memstat (kernel interface) library
 
 Package: libmemstat-dev
 Section: libdevel
-Architecture: kfreebsd-i386 kfreebsd-amd64
+Architecture: kfreebsd-any
 Depends: libmemstat3 (= ${binary:Version}), ${misc:Depends}, libkvm-dev, libc0.1-dev | libc-dev,
  libbsd-dev
 Description: Development files for libmemstat
@@ -155,7 +155,7 @@ Description: Development files for libmemstat
  compile applications that use libmemstat.
 
 Package: libnetgraph4
-Architecture: kfreebsd-i386 kfreebsd-amd64
+Architecture: kfreebsd-any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: FreeBSD memstat (kernel interface) library
  The netgraph library provides a uniform interface for accessing kernel netgraph
@@ -163,28 +163,28 @@ Description: FreeBSD memstat (kernel interface) library
 
 Package: libnetgraph-dev
 Section: libdevel
-Architecture: kfreebsd-i386 kfreebsd-amd64
+Architecture: kfreebsd-any
 Depends: libnetgraph4 (= ${binary:Version}), ${misc:Depends}, libc0.1-dev | libc-dev, libbsd-dev
 Description: Development files for libnetgraph
  This package contains the header files and static library needed to
  compile applications that use libnetgraph.
 
 Package: libipx2
-Architecture: kfreebsd-i386 kfreebsd-amd64
+Architecture: kfreebsd-any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: FreeBSD IPX address conversion support library
  The IPX library provides a set of routune to convert IPX addresses.
 
 Package: libipx-dev
 Section: libdevel
-Architecture: kfreebsd-i386 kfreebsd-amd64
+Architecture: kfreebsd-any
 Depends: libipx2 (= ${binary:Version}), ${misc:Depends}, libc0.1-dev | libc-dev
 Description: Development files for libipx
  This package contains the header files and static library needed to
  compile applications that use libipx.
 
 Package: libkiconv4
-Architecture: kfreebsd-i386 kfreebsd-amd64
+Architecture: kfreebsd-any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: FreeBSD kernel side iconv library
  The kiconv library provides multi-byte character conversion tables for kernel
@@ -192,7 +192,7 @@ Description: FreeBSD kernel side iconv library
 
 Package: libkiconv-dev
 Section: libdevel
-Architecture: kfreebsd-i386 kfreebsd-amd64
+Architecture: kfreebsd-any
 Depends: libkiconv4 (= ${binary:Version}), ${misc:Depends}, libc0.1-dev | libc-dev
 Description: Development files for libkiconv
  This package contains the header files and static library needed to
