* Add libgeom0 and libipx2 udeb packages.
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@3057 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/rules
+++ b/debian/rules
@@ -172,6 +172,8 @@ binary-arch: build install
 #	dh_perl
 #	dh_python
 	dh_makeshlibs -a
+	dh_makeshlibs -plibgeom0 --add-udeb=libgeom0-udeb
+	dh_makeshlibs -plibipx2 --add-udeb=libipx2-udeb
 	dh_makeshlibs -plibusb2 --add-udeb=libusb2-udeb
 	dh_installdeb -a
 	dh_shlibdeps -a
