--- a/debian/control
+++ b/debian/control
@@ -56,6 +56,17 @@ Description: Development files for libgeom
  This package contains the header files and static library needed to
  compile applications that use libgeom.
 
+Package: libgeom0-udeb
+XC-Package-Type: udeb
+Section: debian-installer
+Architecture: kfreebsd-i386 kfreebsd-amd64
+Depends: ${shlibs:Depends}, ${misc:Depends}
+Description: FreeBSD GEOM library
+ This library provides an interface to GEOM, a modular disk I/O request
+ transformation framework provided by the kernel of FreeBSD.
+ .
+ This is a minimal package for use in debian-installer.
+
 Package: libusbhid4
 Architecture: kfreebsd-any
 Depends: ${shlibs:Depends}, ${misc:Depends}
@@ -182,6 +193,16 @@ Depends: libipx2 (= ${binary:Version}), ${misc:Depends}, libc0.1-dev | libc-dev
 Description: Development files for libipx
  This package contains the header files and static library needed to
  compile applications that use libipx.
+
+Package: libipx2-udeb
+Section: debian-installer
+XC-Package-Type: udeb
+Architecture: kfreebsd-i386 kfreebsd-amd64
+Depends: ${shlibs:Depends}, ${misc:Depends}
+Description: FreeBSD IPX address conversion support library
+ The IPX library provides a set of routune to convert IPX addresses.
+ .
+ This is a minimal package for use in debian-installer.
 
 Package: libkiconv4
 Architecture: kfreebsd-any
