switch new udebs to kfreebsd-any
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@3058 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/control
+++ b/debian/control
@@ -59,7 +59,7 @@ Description: Development files for libgeom
 Package: libgeom0-udeb
 XC-Package-Type: udeb
 Section: debian-installer
-Architecture: kfreebsd-i386 kfreebsd-amd64
+Architecture: kfreebsd-any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: FreeBSD GEOM library
  This library provides an interface to GEOM, a modular disk I/O request
@@ -197,7 +197,7 @@ Description: Development files for libipx
 Package: libipx2-udeb
 Section: debian-installer
 XC-Package-Type: udeb
-Architecture: kfreebsd-i386 kfreebsd-amd64
+Architecture: kfreebsd-any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: FreeBSD IPX address conversion support library
  The IPX library provides a set of routune to convert IPX addresses.
